--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Skore.ScoreActivity"
-    android:background="@drawable/background2">
+    tools:context=".Skore.ScoreActivity">
     <FrameLayout
         android:id="@+id/fragment_container"
         android:layout_height="wrap_content"
