--- a/app/src/main/res/layout/activity_signin.xml
+++ b/app/src/main/res/layout/activity_signin.xml
@@ -3,8 +3,7 @@
 
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/background2">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -30,6 +29,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="540dp"
                 android:layout_marginEnd="16dp"
+                android:textSize="40sp"
                 android:backgroundTint="@color/buttony"
                 android:elevation="20dp"
                 android:text="@string/play_buttoon"
