--- a/app/src/main/res/layout/activity_titulka.xml
+++ b/app/src/main/res/layout/activity_titulka.xml
@@ -3,99 +3,27 @@
 
 <layout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/background2">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <data>
 
-    </data>
     <FrameLayout
         android:id="@+id/fragment_container"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent" >
-
-    <ScrollView
+        android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+       >
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_navigation"
+            style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fillViewport="true">
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/menuDoSkoreButton"
+            app:menu="@menu/bottom_navigation_menu"
+            tools:layout_editor_absoluteX="16dp"
+            android:layout_gravity="bottom"/>
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/playButton"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="540dp"
-                android:layout_marginEnd="16dp"
-                android:backgroundTint="@color/buttony"
-                android:elevation="20dp"
-                android:text="@string/play_buttoon"
-                android:textColor="?android:textColorSecondary"
-                app:cornerRadius="20dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/menuDoSkoreButton"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="24dp"
-                android:layout_marginEnd="16dp"
-                android:backgroundTint="@color/buttony"
-                android:elevation="20dp"
-                android:text="@string/skore_button"
-                android:textColor="?android:textColorSecondary"
-                app:cornerRadius="10dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/playButton" />
-
-            <TextView
-                android:id="@+id/titulkaTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="292dp"
-                android:fontFamily="sans-serif-black"
-                android:text="@string/app_name"
-                android:textColor="?android:textColorPrimary"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.498"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="@string/app_name" />
-
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="30dp"
-                android:layout_height="43dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="16dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/gear" />
-
-            <ImageView
-                android:id="@+id/scoreIcon"
-                android:layout_width="40dp"
-                android:layout_height="60dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="64dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/trophy" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-    </ScrollView>
     </FrameLayout>
+
+
 </layout>
