--- a/app/src/main/res/layout/fragment_historia_hraca.xml
+++ b/app/src/main/res/layout/fragment_historia_hraca.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
@@ -12,6 +11,7 @@
 
     <TextView
         android:id="@+id/textView"
+        android:fontFamily="@font/fredoka"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
@@ -39,6 +39,7 @@
 
     <TextView
         android:id="@+id/menoHracaText"
+        android:fontFamily="@font/fredoka"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -48,20 +49,6 @@
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/buttonSpatZHistorie"
-        android:layout_width="48dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginBottom="24dp"
-        android:textColor = "?android:textColorPrimary"
-        android:backgroundTint="@color/buttony"
-        android:elevation="20dp"
-        app:cornerRadius="10dp"
-        app:icon="@drawable/abc_vector_test"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
