--- a/app/src/main/res/layout/fragment_skore.xml
+++ b/app/src/main/res/layout/fragment_skore.xml
@@ -27,6 +27,7 @@
     <TextView
         android:id="@+id/skoreText"
         android:layout_width="wrap_content"
+        android:fontFamily="@font/fredoka"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
         android:text="@string/top10"
