--- a/app/src/main/res/layout/list_item2.xml
+++ b/app/src/main/res/layout/list_item2.xml
@@ -9,6 +9,7 @@
 
     <TextView
         android:id="@+id/skore_historiaTextView"
+        android:fontFamily="@font/fredoka"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -22,6 +23,7 @@
 
     <TextView
         android:id="@+id/datum_historiaTextView2"
+        android:fontFamily="@font/fredoka"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -35,6 +37,7 @@
 
     <TextView
         android:id="@+id/poradoveCTextView"
+        android:fontFamily="@font/fredoka"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
