--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -2,11 +2,25 @@
     <item
         android:id="@+id/page_1"
         android:enabled="true"
-        android:icon="@drawable/badge_tvar"
-        android:title="@string/app_name"/>
+        android:icon="@drawable/home"
+        android:title="@string/home"/>
     <item
         android:id="@+id/page_2"
         android:enabled="true"
-        android:icon="@drawable/badge_tvar"
-        android:title="@string/app_name"/>
+        android:icon="@drawable/history"
+        android:title="@string/history"/>
+    <item
+        android:id="@+id/page_3"
+        android:enabled="true"
+        android:icon="@drawable/feedback"
+        android:title="@string/feedback"/>
+    <item
+        android:id="@+id/page_4"
+        android:enabled="true"
+        android:icon="@drawable/gear"
+        android:title="Settings"/>
+
+
+
+
 </menu>
