--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,19 +1,19 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.SemestralnaPraca" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.SemestralnaPraca" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/primary</item>
+       <!-- <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryVariant">@color/variant</item>
         <item name="colorOnPrimary">@color/primary</item>
-        <!-- Secondary brand color. -->
+        &lt;!&ndash; Secondary brand color. &ndash;&gt;
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_200</item>
         <item name="colorOnSecondary">@color/primary</item>
-        <!-- Status bar color. -->
+        &lt;!&ndash; Status bar color. &ndash;&gt;
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        &lt;!&ndash; Customize your theme here. &ndash;&gt;
         <item name="android:textColorPrimary">@color/white</item>
-        <item name="android:textColorSecondary">#FFFFFF</item>
+        <item name="android:textColorSecondary">#FFFFFF</item>-->
 
     </style>
 </resources>
